// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseText /> should render regular text 1`] = `
<Text
  color="hsla(0, 0%, 100%, 1)"
  fontFamily="text"
  fontSize={25}
  fontWeight="regular"
  lineHeight="m"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 11,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 16,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Displaying some text
</Text>
`;

exports[`<BaseText /> should render text in italics style with line-through 1`] = `
<Text
  color="hsla(0, 0%, 100%, 1)"
  fontFamily="text"
  fontSize={25}
  fontStyle="italic"
  fontWeight="regular"
  lineHeight="m"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 11,
        "fontStyle": "italic",
        "fontWeight": "400",
        "lineHeight": 16,
        "textDecorationLine": "line-through",
      },
    ]
  }
  textDecorationLine="line-through"
>
  Displaying some text
</Text>
`;

exports[`<BaseText /> should throw error when "as" prop passed 1`] = `
<p
  color="hsla(0, 0%, 100%, 1)"
  fontFamily="text"
  fontSize={25}
  fontStyle="italic"
  fontWeight="regular"
  lineHeight="m"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 11,
        "fontStyle": "italic",
        "fontWeight": "400",
        "lineHeight": 16,
        "textDecorationLine": "line-through",
      },
    ]
  }
  textDecorationLine="line-through"
>
  Displaying some text
</p>
`;
